--- a/PhotoGridRef.vcxproj.filters
+++ b/PhotoGridRef.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="os_coord_transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gt_irish.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="os_coord_transform.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gt_irish.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
